--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("./../node_modules/bootstrap/dist/css/bootstrap.css");
+@import url("./../node_modules/bootstrap-icons/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
+
+*{
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.bg-engretech{
+    background-color: #006569;
+}
+
+.text-engretech{
+    color: #006569;
+}
+
+.font-oswald{
+    font-family: 'Oswald', sans-serif;
+}
+
+.text-heading{
+    color: #006569;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+}
