--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,65 @@
 
 
-<h1>About content</h1>
+<div class="banner-section">
+    <div class="banner-video position-absolute top-0">
+        <video width="100%" autoplay loop muted class="mt-5 mt-md-0 pt-3 pt-md-0">
+            <source src="../../../assets/videos/about-video.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="banner-text">
+        <h1 class="text-white col-lg-8 text-center font-oswald display-5 mb-5 m-0">{{about_bannerText}}</h1>
+    </div> 
+</div> 
 
+<div class="container shadow p-3 bg-white rounded mb-5">
+
+    <div class="row m-0">
+        <div class="col-lg-6 d-flex align-items-center text-center">
+            <h5 class="font-oswald company_about px-3 h4">Engre Technologies Pvt Ltd is team of experienced, Dedicated and resourceful Engineers who are engaged in providing high quality and cost-effective mechanical engineering services to its clients in USA and EUROPE since April 2019.</h5>
+        </div>
+        <div class="col-lg-6">
+            <img src="../../../assets/images/about-img.jpg" alt="" class="img-fluid" />
+        </div>
+    </div>
+    <hr/>
+    <div class="row m-0">
+        <div class="col-lg-6">
+            <img src="../../../assets/images/quality-img.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col-lg-6 d-flex align-items-center text-center">
+            <h5 class="font-oswald company_about px-3 h4"><span class="h2 font-oswald fw-bold d-block">Quality Comes First!</span> We make sure that every minute detail is investigated while designing and manufacturing even the smallest product.</h5>
+        </div>
+    </div>
+    
+</div>
+
+
+<div class="row m-0">
+    <div class="container col-lg-5 shadow bg-white py-5 mb-4 text-center rounded-pill">
+        <h3 class="font-oswald text-engretech">Innovative Solutions <i class="bi bi-chat-quote position-absolute h3 ms-2"></i></h3><hr/>
+        <p class="px-4">Our team comprises of experienced Engineers who have hands on experience in manufacturing and have developed products that have been performing successfully. They have worked in all stages of the Product life cycle. Their expertise has been helping clients reduce development cost and time to market their products. We provide solutions that are cost effective and innovative.</p>
+    </div>
+    
+    <div class="container col-lg-5 shadow bg-white py-5 mb-4 text-center rounded-pill">
+        <h3 class="font-oswald text-engretech">Quality Solutions <i class="bi bi-patch-check position-absolute h3 ms-2"></i></h3><hr/>
+        <p class="px-4">Reduced reworks and iterations in product development. Our experience, expertise and tools  helps cut down development cost. Leveraging experience in mass production, sourcing, Tooling and Fabrication, products need minimal changes in the production deployment stage.</p>
+    </div>
+</div>
+
+<div class="bg-engretech py-5 text-center">
+    <h3 class="font-oswald col-lg-6 text-white m-auto">No requirement is small for us. <br />We can start supporting your smallest requirements <br/>in the Product life cycle.</h3>
+</div>
+
+<div class="bg-muted py-5 text-center outsource_content">
+    <h2 class="font-oswald">THE VALUE OF OUTSOURCED ENGINEERING</h2>
+    <h4 class="font-oswald py-3">INTRODUCTION</h4>
+    <h6 class="col-lg-6 text-dark m-auto">The question of whether to outsource different departments of a company has been debated since outsourcing manufacturing became popular towards the end of the last century. After the ability of many companies to vertically integrate in order to better control supply chains came into question, corporations began to see value in reducing costs by outsourcing specific functions. Since the 1990’s we have………..(For continuation please click on “View PDF” at right side)</h6>
+    <a href="" class="btn bg-engretech rounded-pill text-white mt-3 px-4">View PDF <i class="bi bi-file-earmark-pdf"></i></a>
+</div>
+
+<div class="bg-dark py-5 text-center">
+    <i class="bi bi-headset display-4 text-white mb-3 d-inline-block"></i>
+    <h2 class="font-oswald text-white">Need Help with Easier Industrial Solutions? We Are the Experts!</h2>
+    <a href="" class="btn bg-white rounded-pill text-dark mt-3 px-4">Learn More <i class="bi bi-arrow-up-right-square"></i></a>
+</div>
 
