--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -45,3 +45,8 @@
         </div>
     </div>
 </footer>
+
+<div class="bg-dark row m-0 p-3 justify-content-between">
+    <p class="text-white mb-0 fw-lighter col-6 small">Copyright © 2022 Engre Technologies</p>
+    <p class="text-white mb-0 fw-lighter col-6 text-end small">Powered by Engre Technologies</p>
+</div>
