--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -48,7 +48,7 @@
     text-decoration: none;
 }
 .enegre-menu input[type="checkbox"]:checked ~ #sidebarMenu {
-    transform: translateX(0);
+    transform: translateX(0px);
 }
 
 .enegre-menu input[type=checkbox] {
