--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,10 +12,10 @@
           <div id="sidebarMenu">
             <ul class="sidebarMenuInner">
               <li><a href="" class="fw-lighter"> Home</a></li>
-              <li><a href="" routerLink="/about" class="fw-lighter">About Us</a></li>
+              <li><a href="" routerLink="/about" onclick="menuHide()" class="fw-lighter">About Us</a></li>
               <li><a href="" class="fw-lighter">Industries</a></li>
-              <li><a href="" class="fw-lighter">Services</a></li>
-              <li><a href="" class="fw-lighter">Contact</a></li>
+              <li><a href="" routerLink="/services" class="fw-lighter">Services</a></li>
+              <li><a href="" routerLink="/contact" class="fw-lighter">Contact</a></li>
             </ul>
           </div>
         </div>
