--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,6 +3,11 @@ footer{
     background-color: #003436;
 }
 
+footer ul li a:hover{
+    padding-left: 5px;
+    transition: 0.5s all;
+}
+
 footer .bi-facebook{
     color: #1877f2;
 }
