--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,55 @@
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
 }
+
+
+
+.banner-video{
+    z-index: -1;
+}
+
+.banner-video:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.6); 
+}
+
+.banner-text{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 560px;
+    width:75%;
+    margin: 0 auto;
+}
+
+.banner-text h5{
+    line-height: 30px;
+}
+
+
+@media screen and (max-width: 762px){
+    .banner-text{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        height: 320px;
+    }
+
+    .banner-text .display-4{
+        font-size: 14px;
+        width:75%;
+    }
+
+    .banner-text h5{
+        font-size: 10px;
+        line-height: 18px;
+    }
+
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
