--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,32 +5,40 @@
 
             <div class="col-lg-3 m-0 col-6 col-md-3">
                 <h4 class="font-oswald mb-3 border-secondary border-bottom d-inline-block pb-2">Company</h4>
-                <ul class="list-unstyled" *ngFor="let company of companyList">
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> {{company}}</a></li>
+                <ul class="list-unstyled">
+                    <li class="mb-2">
+                        <a routerLink="/about" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> About Us</a>
+                    </li>
+                    <li class="mb-2">
+                        <a routerLink="careers" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Careers</a>
+                    </li>
+                    <li class="mb-2">
+                        <a routerLink="/contact" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Contact Us</a>
+                    </li>
                 </ul>
             </div>
 
             <div class="col-lg-3 m-0 col-6 col-md-3">
                 <h4 class="font-oswald me-3 mb-3 border-secondary border-bottom d-inline-block pb-2">Services</h4>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> CAD Modeling & Drafting</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Electromechanical</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Value Engineering</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Design Changes</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> PLM Support</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Tooling</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> NPD</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> CAD Modeling & Drafting</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Electromechanical</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Value Engineering</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Design Changes</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> PLM Support</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Tooling</a></li>
+                    <li class="mb-2"><a routerLink="/services" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> NPD</a></li>
                 </ul>
             </div>
             
             <div class="col-lg-3 m-0 col-6 col-md-3">
                 <h4 class="font-oswald me-3 mb-3 border-secondary border-bottom d-inline-block pb-2">Industries</h4>
                 <ul class="list-unstyled">
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Consumer Durables</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Testing Machines</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Semiconductor</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Automotive</a></li>
-                    <li class="mb-2"><a href="#" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Medical</a></li>
+                    <li class="mb-2"><a routerLink="/industries" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Consumer Durables</a></li>
+                    <li class="mb-2"><a routerLink="/industries" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Testing Machines</a></li>
+                    <li class="mb-2"><a routerLink="/industries" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Semiconductor</a></li>
+                    <li class="mb-2"><a routerLink="/industries" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Automotive</a></li>
+                    <li class="mb-2"><a routerLink="/industries" class="font-oswald text-white text-decoration-none text-uppercase"><i class="bi bi-chevron-right"></i> Medical</a></li>
                 </ul>
             </div>
 
