--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
 
 <div class="banner-section">
     <div class="banner-video position-absolute top-0">
-        <video width="100%" autoplay loop muted class="mt-5 mt-md-0 pt-3 pt-md-0">
+        <video width="100%" loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true" class="mt-5 mt-md-0 pt-3 pt-md-0">
             <source src="../../../assets/videos/contact-video.mp4" type="video/mp4">
         </video>
     </div>
@@ -56,5 +56,9 @@
                 <button type="submit" class="btn-lg text-white btn text-uppercase px-4 py-2 mt-3 rounded-pill btn-sm bg-engretech">Submit <i class="bi bi-send-fill"></i></button>
             </form>
         </div>
+    </div>
+
+    <div id="" class="row border px-0 rounded py-2 mt-3" style="height: 500px">
+        <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=5th%20East%20Cross%20Manjunatha%20Lay%20Out,%20Murgesh%20Pallya%20Bengaluru,%20Karnataka%20560017+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" class="rounded" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
