--- a/src/app/components/section/section.component.css
+++ b/src/app/components/section/section.component.css
@@ -18,7 +18,7 @@
     background-size: cover;
 }
 
-.service_blocks .service_block{
+/* .service_blocks .service_block{
     border: 2px solid #d4f5f8;
     border-radius: 15px;
 }    
@@ -28,7 +28,7 @@
     border-radius: 15px;
     transition: 0.4s ease-in-out;
     color: #fff;
-}
+} */
 
 .service_blocks .service_block .h5{
     font-size: 14px;
@@ -37,13 +37,14 @@
 }
 
 .service_block .bi{
-    left: -15px;
+    /* left: -15px;
     background: #006569;
     color: #fff;
     padding: 9px 11px;
     top: -23px;
     border-radius: 25px;
-    box-shadow: 4px 3px 0px #fff;
+    box-shadow: 4px 3px 0px #fff; */
+    color:  #024749;
 }
 
 
