--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -2,7 +2,7 @@
 
 <div class="banner-section">
     <div class="banner-video position-absolute top-0">
-        <video width="100%" autoplay loop muted class="mt-5 mt-md-0 pt-3 pt-md-0">
+        <video width="100%" loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true" class="mt-5 mt-md-0 pt-3 pt-md-0">
             <source src="../../../assets/videos/services-video.mp4" type="video/mp4">
         </video>
     </div>
